--- a/ecommerce-angular/tsconfig.spec.json
+++ b/ecommerce-angular/tsconfig.spec.json
@@ -4,12 +4,15 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    "types": ["jasmine"]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+  "files": ["src/test.ts"],
+  "include": ["**/*.spec.ts", "**/*.d.ts"],
+  "exclude": [
+    "src/app/core/guards/auth.guard.spec.ts",
+    "src/app/core/guards/guest.guard.spec.ts",
+    "src/app/core/guards/admin.guard.spec.ts"
   ]
 }
+
+
